Corrected typo in translations

--- a/Client/src/assets/translations/texts.en.json
+++ b/Client/src/assets/translations/texts.en.json
@@ -49,5 +49,5 @@
     "Total": "Total",
     "Percent": "Percent",
     "Statistics": "Statistics",
-    "PerGame": "Per Game)"
+    "PerGame": "Per Game"
 }
